# FFmpegCmd

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: LogUtil.h  native-lib.cpp
app/src/main/cpp/fftools/: ffmpeg.c  ffmpeg.h  ffmpeg_opt.c
app/src/main/cpp/include/: config.h
app/src/main/cpp/utils/: VersionUtils.cpp  VersionUtils.h
app/src/main/java/com/cloud/ffmpeg/: AboutActivity.java  MainActivity.java
app/src/main/java/com/cloud/ffmpeg/bean/: ItemVersion.java
app/src/main/java/com/cloud/ffmpeg/cmd/: Cmd.java  CmdBuilder.java  Encoder.java  FFmepgCmd.java
app/src/main/java/com/cloud/ffmpeg/utils/: GsonUtils.java
app/src/main/res/layout/: activity_about.xml
app/src/main/res/menu/: activity_main_drawer.xml  menu_detail.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/values-v21/: styles.xml
gradle/wrapper/: gradle-wrapper.properties
